@startuml
' Diagramme de classes de conception pour le projet
' Généré par assistant — notation demandée

title Diagramme de classes - Conception

' --- Entités Utilisateurs ---
package Utilisateurs{


class User {
    - idUser : int
    - email : string
    - login : string
    - passwordHash : string
    - actif : bool
    - role : Roles
    - createdAt : \DateTime|null
    - updatedAt : \DateTime|null
    --
    + <<create>>User(data: array): User
    + getId(): int
    + getEmail(): string
    + setEmail(email: string): void
    + getLogin(): string
    + setLogin(login: string): void
    + setPasswordHash(hash: string): void
    + getPasswordHash(): string
    + isActif(): bool
    + setActif(actif: bool): void
    + getRole(): Roles
    + isAdmin(): bool
    + isClient(): bool
}

class Acheteur {
    - nom : string
    - prenom : string
    - adressePrincipale : string|null
    - paniers : PanierEntity[]
    - commandes : CommandeEntity[]
    --
    + <<create>>Acheteur(data: array): Acheteur
    + getNom(): string
    + getPrenom(): string
    + getIdentite(): string
    + getAdressePrincipale(): string|null
    + setAdressePrincipale(adresse: string): void
    + addToPanier(produit: ProduitEntity, quantite: int): void
    + removeFromPanier(produitId: int): void
    + getCommandes(): CommandeEntity[]
}

class Client {
    --
    + <<create>>Client(data: array): Client
    + getProfilPublic(): string
    + changerMotDePasse(nouveauMotDePasse: string): void
}

class Admin {
    --
    + <<create>>Admin(data: array): Admin
    + manageCatalogue(): void
    + manageUsers(): void
}

class SessionAchat {
    - idSession : int
    - dateCreation : \DateTime
    - dateDerniereActivite : \DateTime
    - acheteur : Acheteur
    --
    + <<create>>SessionAchat(acheteur: Acheteur): SessionAchat
    + estActive(): bool
    + getAcheteur(): Acheteur
    + setAcheteur(acheteur: Acheteur): void
    + refreshActivite(): void
}

}

' --- Produits et dérivés ---
package Produits{


class AProductEntity {
    - id : int
    - nom : string
    - description : string
    - prix : float
    - stock : int
    - prestige : int
    - noteMoyenne : float
    - images : string[]|null
    - meta : array
    --
    + <<create>>AProductEntity(data: array): AProductEntity
    + getId(): int
    + getNom(): string
    + getDescription(): string
    + getPrix(): float
    + setPrix(prix: float): void
    + getStock(): int
    + setStock(stock: int): void
    + isAvailable(): bool
    + decrementStock(qte: int): bool
    + incrementStock(qte: int): void
    + getNoteMoyenne(): float
}

' --- Avis ---
class AvisEntity {
    - idAvis : int
    - note : int
    - commentaire : string|null
    - auteur : User
    - produit : ProduitEntity
    - createdAt : \DateTime
    - validated : bool
    --
    + <<create>>Avis(auteur: User, produit: ProduitEntity, note: int, commentaire: string|null): AvisEntity
    + getNote(): int
    + getCommentaire(): string|null
    + getAuteur(): User
    + getProduit(): ProduitEntity
}

class Parfum {
    - concentration : string|null
    - familleOlfactive : string|null
    - notes : string[]|null
    --
    + <<create>>Parfum(data: array): Parfum
    + getConcentration(): string|null
    + getFamilleOlfactive(): string|null
    + getNotesParfum(): string
}

class Creme {
    - volumeMl : int|null
    - typePeau : string|null
    --
    + <<create>>Creme(data: array): Creme
    + getVolumeMl(): int|null
    + getTypePeau(): string|null
    + isAdaptedTo(typePeau: string): bool
}

class Encens {
    - parfum : string|null
    - dureeBrulageMin : int|null
    --
    + <<create>>Encens(data: array): Encens
    + getParfum(): string|null
    + getDureeBrulageMin(): int|null
    + getScentDescription(): string
}

class NoCapEntity {
    - particularite : string|null
    --
    + <<create>>NoCapEntity(data: array): NoCapEntity
    + specialBehavior(): void
}

}

' --- Factory ---

package Factory{

class ProduitFactory {
    --
    + <<create>>createFromArray(data: array): ProduitEntity
    + createSpecific(type: string, data: array): AProductEntity
    + supportsType(type: string): bool
}

}





' --- Panier ---
package Commandes{


class PanierEntity {
    - idPanier : int
    - owner : Acheteur|null
    - lignes : LignePanierEntity[]
    - total : float
    - updatedAt : \DateTime|null
    --
    + <<create>>PanierEntity(data: array = []): PanierEntity
    + addLigne(ligne: LignePanierEntity): void
    + removeLigne(produitId: int): void
    + getLignes(): LignePanierEntity[]
    + calculateTotal(): float
    + getTotal(): float
    + clear(): void
}

class LignePanierEntity {
    - idLigne : int
    - produit : ProduitEntity
    - quantite : int
    - prixUnitaire : float
    --
    + <<create>>LignePanierEntity(produit: ProduitEntity, quantite: int): LignePanierEntity
    + getProduit(): ProduitEntity
    + getQuantite(): int
    + setQuantite(qte: int): void
    + getPrixUnitaire(): float
    + getSousTotal(): float
}

' --- Commandes ---
class CommandeEntity {
    - idCommande : int
    - acheteur : Acheteur
    - lignes : LigneCommandeEntity[]
    - montant : float
    - statut : StatutCommande
    - adresseLivraison : string
    - paiement : Payement|null
    - reference : string|null
    - createdAt : \DateTime
    - updatedAt : \DateTime|null
    --
    + <<create>>CommandeEntity(data: array): CommandeEntity
    + addLigne(ligne: LigneCommandeEntity): void
    + calculateMontant(): float
    + getMontant(): float
    + setStatut(s: StatutCommande): void
    + getStatut(): StatutCommande
    + pay(paiement: Payement): bool
}

class LigneCommandeEntity {
    - idLigne : int
    - produit : ProduitEntity
    - quantite : int
    - prixUnitaire : float
    --
    + <<create>>LigneCommandeEntity(produit: ProduitEntity, quantite: int): LigneCommandeEntity
    + getSousTotal(): float
}

}

' --- Validation / Chain of Responsibility ---
package ChainOfResponsibility{


class CommandeValidator {
    - handler : AbstractValidationHandler|null
    --
    + <<create>>CommandeValidator(handler: AbstractValidationHandler|null = null): CommandeValidator
    + setHandler(handler: AbstractValidationHandler): void
    + validate(commande: CommandeEntity): bool
}

abstract class AbstractValidationHandler {
    - next : AbstractValidationHandler|null
    --
    + <<create>>AbstractValidationHandler(): AbstractValidationHandler
    + setNext(next: AbstractValidationHandler): AbstractValidationHandler
    + handle(commande: CommandeEntity): bool
}

class AddressValidationHandler {
    --
    + <<create>>AddressValidationHandler(): AddressValidationHandler
    + handle(commande: CommandeEntity): bool
}

class PaymentValidationHandler {
    --
    + <<create>>PaymentValidationHandler(): PaymentValidationHandler
    + handle(commande: CommandeEntity): bool
}

class StockValidationHandler {
    --
    + <<create>>StockValidationHandler(): StockValidationHandler
    + handle(commande: CommandeEntity): bool
}

}

' --- Services et stratégies ---
package Strategy{


class CatalogueService {
    - produitRepository : mixed
    - factory : ProduitFactory
    --
    + <<create>>CatalogueService(produitRepository, factory: ProduitFactory): CatalogueService
    + getProduits(): ProduitEntity[]
    + getProduitById(id: int): ProduitEntity|null
    + search(query: string): ProduitEntity[]
    + sort(strategy: CatalogSortStrategy): ProduitEntity[]
}

interface CatalogSortStrategy {
    + sort(produits: ProduitEntity[]): ProduitEntity[]
}

class SortByPrestige {
    --
    + sort(produits: ProduitEntity[]): ProduitEntity[]
}

class SortByPrice {
    - ascending : bool
    --
    + <<create>>SortByPrice(ascending: bool = true): SortByPrice
    + sort(produits: ProduitEntity[]): ProduitEntity[]
}

class SortByRating {
    --
    + sort(produits: ProduitEntity[]): ProduitEntity[]
}

}

' --- Enums ---
package Enums{


enum Roles {
    ADMIN
    ACHETEUR
    CLIENT
}

enum Payement {
    CB
    PAYPAL
    STRIPE
    A_VIREMENT
}

enum StatutCommande {
    EN_ATTENTE
    PAYEE
    EN_PREPARATION
    EXPEDIEE
    LIVREE
    ANNULEE
}

}

' --- Relations/Héritages ---
User <|-- Acheteur
Acheteur <|-- Client
Acheteur <|-- Admin

AProductEntity <|-- Parfum
AProductEntity <|-- Creme
AProductEntity <|-- Encens
AProductEntity <|-- NoCapEntity

ProduitFactory ..> AProductEntity

PanierEntity "1" *-- "0..*" LignePanierEntity : contains
PanierEntity --> "0..1" Acheteur : owner

CommandeEntity "1" *-- "1..*" LigneCommandeEntity : contains
CommandeEntity --> Acheteur : acheteur
CommandeEntity ..> Payement

LignePanierEntity --> AProductEntity
LigneCommandeEntity --> AProductEntity

SessionAchat --> Acheteur
AvisEntity --> User
AvisEntity --> AProductEntity

CatalogueService ..> AProductEntity
CatalogueService ..> ProduitFactory
CatalogueService ..> CatalogSortStrategy

CatalogSortStrategy <|.. SortByPrestige
CatalogSortStrategy <|.. SortByPrice
CatalogSortStrategy <|.. SortByRating

AbstractValidationHandler <|-- AddressValidationHandler
AbstractValidationHandler <|-- PaymentValidationHandler
AbstractValidationHandler <|-- StockValidationHandler
CommandeValidator o-- AbstractValidationHandler : handler
CommandeValidator ..> CommandeEntity

@enduml

w